[project]
name = "quarto"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "patapelada", email = "77882237+patapelada@users.noreply.github.com"},
]
dependencies = ["ipykernel>=6.29.5", "tabulate>=0.9.0", "questionary>=2.1.0", "termcolor>=3.1.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true
